# AI

./: .gitignore  Jenkinsfile  PROJECT_DIRECTION.md  README.md  docker-compose.yml  opencode.jsonc  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
.opencode/commands/: eks-change-plan.md  eks-incident.md  eks-status.md  hermes-loop.md  hermes-reflect.md  hermes-update-skills.md
.opencode/learning/: skill-backlog.md
.opencode/skills/eks-control/: SKILL.md
.opencode/skills/eks-management/: SKILL.md
.opencode/skills/eks-monitoring/: SKILL.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/tests/: test_main.py
deploy/istio/: README.md
docs/: architecture.md  cicd.md  mcp.md  skills.md
mcp-servers/grafana/: README.md
mcp-servers/jenkins/: README.md
mcp-servers/kubernetes/: README.md
observability/grafana-dashboards/: README.md
observability/prometheus-rules/: README.md
safe_eks_mcp/: args.py  aws_tools.py  config.py  control_tools.py  exec.py  helm_tools.py  kubectl_tools.py  policy.py  response.py  runner.py  server.py  types.py  validation.py
skills/: deployment-risk-review.md  incident-triage.md  rollback-planner.md
src/: args.ts  aws-tools.ts  config.ts  control-tools.ts  errors.ts  exec.ts  helm-tools.ts  index.ts  kubectl-tools.ts  policy.ts  response.ts  schemas.ts  server.ts  tool-runner.ts  types.ts
tests/: conftest.py  fake-cli.ts  mcp.test.ts  policy.test.ts  security-regression.test.ts  test_policy.py  test_server.py  test_tools.py
(+6 files in other folders)
