[project]
name = "safe-eks-mcp"
version = "0.1.0"
description = "Readonly-first Python MCP server and OpenCode customization for safe Amazon EKS operations."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.4",
  "pydantic>=2.0",
  "typing-extensions>=4.9",
]

[project.scripts]
safe-eks-mcp = "safe_eks_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "pytest>=8.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
include = ["safe_eks_mcp", "tests"]
reportUnusedFunction = false
reportUnnecessaryComparison = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101", "S603", "S607"]
